--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "rapp",
+  "name": "genero",
   "version": "0.1.0",
+  "homepage": "https://genero.abes.ac.in/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
