--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "genero",
   "version": "0.1.0",
-  "homepage": "https://genero.abes.ac.in/",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
